# alchemi-hsi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  TASKS.seed.yaml  TASKS.yaml  mypy.ini  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.yml  feature_request.md  techdebt.yml
.github/workflows/: ci.yml  triage.yml
configs/: config.yaml  data.yaml  default.yaml  eval.yaml  model.yaml  schema.py  train.align.yaml  train.mae.yaml
configs/data/: aviris_gas.yaml  emit_gas.yaml  emit_solids.yaml  enmap_mae.yaml  hytes_lwir.yaml
configs/eval/: gas_default.yaml  heavy_atmosphere.yaml  representation_default.yaml  solids_default.yaml  srf_blind_vs_aware.yaml  srf_robustness.yaml
configs/phase2/: alignment.yaml  (+2 more)
data/: README.md  ablation_mae.csv
docs/: APPENDIX.md  ARCH.md  CLI.md  CONFIG.md  CONTRIBUTING.md  DATA_SPEC.md  DECISIONS.md  DEFINITION_OF_DONE.md  EPIC7_FINAL_REVIEW.md  EVAL.md  INGEST_MAKO_COMEX.md  PHYSICS_HELPERS.md  PHYSICS_LAYER.md  PRD.md  ROADMAP.md  SEEDING.md  architecture.md  data_and_physics_contracts_M1.md  data_pipeline.md  index.md  physics.md  section4_data_model.md
notebooks/: ingest_mako_comex_quickstart.ipynb  mako_comex_quicklook.ipynb  quickstart.ipynb
scripts/: ablate_pretrain.py  bench_throughput.py  build_lab_index.py  demo_any_sensor_tokenization.py  eval_alchemi.py  expand_tasks.py  preprocess_data.py  run_align.sh  run_heavy_atmosphere_suite.py  run_pretrain_mae.sh  run_srf_robustness_suite.py  seed_github.py  seed_github.sh  train_alchemi.py
spectra/: __init__.py
tests/: conftest.py  test_ablate_runs.py  test_avirisng_adapter.py  test_avirisng_ingest.py  test_baselines_exist.py  test_bootstrap.py  test_calibration.py  test_cli_data.py  test_cli_errors.py  test_cube_basic.py  test_cube_tiling.py  test_ddp_smoke.py  test_emit_io.py  test_emit_srf.py  test_enmap_ingest.py  test_enmap_srf.py  test_hytes_io.py  test_infonce_toy.py  test_masking_ablation.py  test_pairing_cache.py  test_physics_continuum.py  test_physics_planck.py  test_physics_rad_reflectance.py  test_physics_rt_regime.py  test_physics_solar.py  test_physics_tes_lwir.py  test_planck.py  test_planck_properties.py  test_planck_quantity_checks.py  test_quality_masks.py  test_sam.py  test_sample.py  test_sample_cube_roundtrip.py  test_spectralearth_loader.py  test_spectrum.py  test_spectrum_validation.py  test_splib_io.py  test_srf_hytes.py  test_srf_matrix_validation.py  test_srf_norm.py  (+8 more)
tools/: __init__.py  seed_labels.py
(+373 files in other folders)
