[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "alchemi-hsi"
version = "0.2.0"
description = "ALCHEMI — Atmosphere-aware Lab-to-scene Contrastive Hyperspectral Embeddings for Material Identity"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Marshall" }]
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "scipy>=1.11",
  "xarray>=2023.1",
  "einops>=0.7",
  "scikit-learn>=1.3",
  "typer[all]>=0.12",
  "tqdm>=4.66",
  "rich>=13.7",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "pydantic>=2.7",
  "joblib>=1.4",
  "rasterio>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4.2",
  "black>=24.3",
  "isort>=5.13.2",
  "mypy>=1.10.0",
  "pre-commit>=3.7",
  "hypothesis>=6.100",
]
io = [
  "h5py>=3.10",
  "zarr>=2.16",
]
raster = [
  "rasterio>=1.3",
  "rio-cogeo>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alchemi"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["alchemi"]
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP", "NPY", "RUF", "W"]
ignore = ["E203"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
